RESOLVED FIXED 243098
REGRESSION(252520@main): [ macOS iOS15 ] TestWebKitAPI.WKNavigation.AutomaticVisibleViewReloadAfterWebProcessCrash is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=243098
Summary REGRESSION(252520@main): [ macOS iOS15 ] TestWebKitAPI.WKNavigation.Automatic...
Hercules Hjalmarsson
Reported 2022-07-22 09:31:53 PDT
TestWebKitAPI.WKNavigation.AutomaticVisibleViewReloadAfterWebProcessCrash Is a flaky API crash on macOS and iOS15 ToT and appears to have started crashing more frequently around 252518@main-252520@main. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKNavigation.AutomaticVisibleViewReloadAfterWebProcessCrash DIFF: Test suite failed Crashed TestWebKitAPI.WKNavigation.AutomaticVisibleViewReloadAfterWebProcessCrash 2022-07-15 19:12:27.005 com.apple.WebKit.WebContent.Development[46329:23180403] ApplePersistence=NO ASSERTION FAILED: isValid() /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/Source/WebKit/Platform/IPC/Connection.cpp(1074) : void IPC::Connection::dispatchMessage(IPC::Decoder &) 1 0x1252a3cf9 WTFCrash 2 0x15a78087b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x15bce82af IPC::Connection::dispatchMessage(IPC::Decoder&) 4 0x15bce8b15 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 5 0x15bce7505 IPC::Connection::dispatchIncomingMessages() 6 0x15bd09abf IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_15::operator()() 7 0x15bd099e9 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_15, void>::call() 8 0x1252d3402 WTF::Function<void ()>::operator()() const 9 0x12536ecde WTF::RunLoop::performWork() 10 0x12537373e WTF::RunLoop::performWork(void*) 11 0x7ff819c78aeb __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 12 0x7ff819c78a53 __CFRunLoopDoSource0 13 0x7ff819c787cd __CFRunLoopDoSources0 14 0x7ff819c771e8 __CFRunLoopRun 15 0x7ff819c767ac CFRunLoopRunSpecific 16 0x7ff81aacad9a -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 17 0x10ccdc313 TestWebKitAPI::Util::run(bool*) 18 0x10cc06969 WKNavigation_AutomaticVisibleViewReloadAfterWebProcessCrash_Test::TestBody() 19 0x10cdd5aab void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 20 0x10cd99efa void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 21 0x10cd99e43 testing::Test::Run() 22 0x10cd9afc1 testing::TestInfo::Run() 23 0x10cd9c064 testing::TestSuite::Run() 24 0x10cdab17b testing::internal::UnitTestImpl::RunAllTests() 25 0x10cdda9eb bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 26 0x10cdaab3a bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 27 0x10cdaaa25 testing::UnitTest::Run() 28 0x10c43f2b1 RUN_ALL_TESTS() 29 0x10c43f246 TestWebKitAPI::TestsController::run(int, char**) 30 0x10cd679f2 main 31 0x1131bc51e DIFF URL: https://build.webkit.org/#/builders/103/builds/6893/steps/18/logs/stdio
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-22 09:32:15 PDT
Hercules Hjalmarsson
Comment 2 2022-07-22 09:38:43 PDT
I'm not able to determine an exact regression point due to no builds available to test on in the 252518@main-252519@main range. However, I'm able to bisect the crash to 252520@main and I'm not able to reproduce the crash on 252517@main leaving a small possible regression range. I reproduced the issue running 100 iterations of command: run-api-tests TestWebKitAPI.WKNavigation.AutomaticVisibleViewReloadAfterWebProcessCrash
Chris Dumez
Comment 3 2022-07-22 12:46:21 PDT
EWS
Comment 4 2022-07-23 15:00:18 PDT
Committed 252760@main (1e3bfd0f884d): <https://commits.webkit.org/252760@main> Reviewed commits have been landed. Closing PR #2668 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.