REGRESSION(252518@main-252520@main): [ macOS iOS15 ] TestWebKitAPI.WKNavigation.AutomaticVisibleViewReloadAfterWebProcessCrash is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=243098 <rdar://97440864>

Reviewed by Darin Adler.

In 252520@main, I made it so that IPC::Connection::m_isValid can now get updated
on a background thread. This caused us to sometimes hit a `RELEASE_ASSERT(isValid())`
under IPC::Connection::dispatchMessage(). Since this function runs on the main
thread, the purpose of this assertion was to make sure that invalidation has not
yet occurred on the main thread. After 252520@main, this is tracked by
!m_didInvalidationOnMainThread, not m_isValid. Update the assertion accordingly.

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::dispatchMessage):

Canonical link: https://commits.webkit.org/252760@main